syntax = "proto3";

message ProtoHttpRequest {
  string path_and_query = 1;
  string method = 2;
  string body = 3;
  repeated Header headers = 4;
}

message ProtoHttpResponse {
  int32 status_code = 1;
  string body = 2;
  repeated Header headers = 3;
}

message Header {
  string key = 1;
  string value = 2;
}